fix(concert): 票區樂觀鎖/超賣約束、圖片上傳硬化、跨欄位驗證與授權 fail-closed
票區加 @Version 樂觀鎖 + DB CHECK(sold+locked<=total)，並整理重複的 migration；
封面圖上傳改以 magic bytes 驗證 + 固定 key + 型別 allowlist，換圖/刪演唱會清理舊檔；
場次補時間窗驗證、票區補狀態前置條件、自由文字與 totalSeats 補上限；
checkOwnership 改 fail-closed 並以 Role enum 取代字串比對；
詳情查詢以批次查詢消除 N+1；並修正搜尋 native query 與 Pageable sort 衝突造成的 SQL 錯誤。