@@ -6,18 +6,25 @@ import com.livebeat.concert.domain.model.*;
 import com.livebeat.concert.domain.port.*;
 import com.livebeat.shared.exception.ApiException;
 import com.livebeat.shared.exception.ErrorCode;
+import com.livebeat.shared.security.Role;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * [concert] 演唱會應用服務
@@ -31,6 +38,8 @@ import java.util.UUID;
 @RequiredArgsConstructor
 @Transactional
 public class ConcertService {
+
+    private static final Logger log = LoggerFactory.getLogger(ConcertService.class);
 
     /** 公開 API：ENDED / CANCELLED 演唱會的可見視窗（天數） */
     private static final int PUBLIC_VISIBILITY_DAYS = 14;
@@ -74,7 +83,7 @@ public class ConcertService {
     public Page<ConcertSummaryResponse> listConcertsAdmin(String q, String category, String city,
                                                            UUID actorId, String actorRole, Pageable pageable) {
         String keyword = toKeyword(q);
-        UUID organizerFilter = "ROLE_ORGANIZER".equals(actorRole) ? actorId : null;
+        UUID organizerFilter = Role.ORGANIZER.matches(actorRole) ? actorId : null;
         return concertRepository.searchAdmin(keyword, category, city, organizerFilter, pageable)
                 .map(ConcertSummaryResponse::from);
     }
@@ -90,7 +99,7 @@ public class ConcertService {
     /** ADMIN 可指定 organizerId；ORGANIZER 一律使用自己的 actorId，忽略請求中的 organizerId */
     public ConcertDetailResponse createConcert(CreateConcertRequest req, UUID actorId, String actorRole) {
         String country = (req.country() != null && !req.country().isBlank()) ? req.country() : "TW";
-        UUID organizerId = ("ROLE_ADMIN".equals(actorRole) && req.organizerId() != null)
+        UUID organizerId = (Role.ADMIN.matches(actorRole) && req.organizerId() != null)
                 ? req.organizerId() : actorId;
         Concert concert = Concert.create(req.title(), req.artist(), req.description(),
                 req.venue(), req.city(), country, req.category(), organizerId);
@@ -123,7 +132,7 @@ public class ConcertService {
     }
 
     public void deleteConcert(UUID concertId, UUID actorId, String actorRole) {
-        if (!"ROLE_ADMIN".equals(actorRole)) {
+        if (!Role.ADMIN.matches(actorRole)) {
             throw new ApiException(ErrorCode.ACCESS_DENIED);
         }
         Concert concert = findConcertById(concertId);
@@ -131,18 +140,32 @@ public class ConcertService {
             throw new ApiException(ErrorCode.CONCERT_DELETE_NOT_ALLOWED);
         }
         concertRepository.deleteById(concertId);
+        // 清除 MinIO 中的封面圖，避免演唱會刪除後留下孤兒檔（接上原本未被呼叫的 StoragePort.remove）
+        if (concert.getImageUrl() != null) {
+            try {
+                storagePort.remove(coverKey(concertId));
+            } catch (RuntimeException e) {
+                // 圖片清理為 best-effort：DB 紀錄已刪，儲存清理失敗不應使整個刪除失敗
+                log.warn("Failed to remove cover image for deleted concert {}", concertId, e);
+            }
+        }
     }
 
     public String uploadImage(UUID concertId, MultipartFile file, UUID actorId, String actorRole) {
         Concert concert = findConcertAndCheckOwnership(concertId, actorId, actorRole);
-        String contentType = file.getContentType();
-        if (contentType == null || !contentType.startsWith("image/")) {
-            throw new ApiException(ErrorCode.INVALID_FILE_TYPE);
-        }
-        String ext = contentType.substring("image/".length());
-        String key = "concerts/" + concertId + "/cover." + ext;
+        byte[] content;
         try {
-            String url = storagePort.store(key, file.getInputStream(), file.getSize(), contentType);
+            content = file.getBytes();
+        } catch (IOException e) {
+            throw new ApiException(ErrorCode.STORAGE_UPLOAD_FAILED);
+        }
+        // 不信任 client 的 Content-Type：以 magic bytes 判定實際格式並限制於 allowlist。
+        // 內容判定出的 contentType 才是寫入物件儲存的權威值。
+        ImageType type = ImageType.detect(content);
+        // 固定 key（不含 client 可控的副檔名）：重複上傳直接覆寫，不會殘留舊副檔名的孤兒檔。
+        String key = coverKey(concertId);
+        try (InputStream in = new ByteArrayInputStream(content)) {
+            String url = storagePort.store(key, in, content.length, type.contentType());
             concertRepository.save(concert.withImageUrl(url));
             return url;
         } catch (IOException e) {
@@ -154,6 +177,7 @@ public class ConcertService {
 
     public ConcertSessionResponse addSession(UUID concertId, CreateSessionRequest req, UUID actorId, String actorRole) {
         findConcertAndCheckOwnership(concertId, actorId, actorRole);
+        validateSessionSchedule(req.saleStartAt(), req.saleEndAt(), req.eventDate(), true);
         ConcertSession session = ConcertSession.create(
                 concertId, req.sessionName(), req.eventDate(),
                 req.hasAssignedSeats(), req.maxTicketsPerOrder(),
@@ -172,6 +196,7 @@ public class ConcertService {
                 .withMaxTicketsPerOrder(req.maxTicketsPerOrder() != null ? req.maxTicketsPerOrder() : session.getMaxTicketsPerOrder())
                 .withSaleStartAt(req.saleStartAt() != null ? req.saleStartAt() : session.getSaleStartAt())
                 .withSaleEndAt(req.saleEndAt() != null ? req.saleEndAt() : session.getSaleEndAt());
+        validateSessionSchedule(updated.getSaleStartAt(), updated.getSaleEndAt(), updated.getEventDate(), false);
         ConcertSession saved = sessionRepository.save(updated);
         List<TicketZoneResponse> zones = zoneRepository.findBySessionId(sessionId).stream()
                 .map(TicketZoneResponse::from).toList();
@@ -204,7 +229,8 @@ public class ConcertService {
     public TicketZoneResponse addTicketZone(UUID concertId, UUID sessionId,
                                              CreateTicketZoneRequest req, UUID actorId, String actorRole) {
         findConcertAndCheckOwnership(concertId, actorId, actorRole);
-        findSessionById(sessionId, concertId);
+        ConcertSession session = findSessionById(sessionId, concertId);
+        ensureSessionAcceptsZoneChanges(session);
         TicketZone zone = TicketZone.create(sessionId, req.zoneCode(), req.zoneName(),
                 req.price(), req.totalSeats());
         return TicketZoneResponse.from(zoneRepository.save(zone));
@@ -213,7 +239,8 @@ public class ConcertService {
     public TicketZoneResponse updateTicketZone(UUID concertId, UUID sessionId, UUID zoneId,
                                                 UpdateTicketZoneRequest req, UUID actorId, String actorRole) {
         findConcertAndCheckOwnership(concertId, actorId, actorRole);
-        findSessionById(sessionId, concertId);
+        ConcertSession session = findSessionById(sessionId, concertId);
+        ensureSessionAcceptsZoneChanges(session);
         TicketZone zone = zoneRepository.findById(zoneId)
                 .filter(z -> z.getSessionId().equals(sessionId))
                 .orElseThrow(() -> new ApiException(ErrorCode.ZONE_NOT_FOUND));
@@ -249,11 +276,22 @@ public class ConcertService {
         return concert;
     }
 
-    /** ORGANIZER 只能操作自有演唱會；ADMIN 無限制 */
+    /**
+     * 授權判斷採 fail-closed：
+     *   - ADMIN：全權。
+     *   - ORGANIZER：僅限自有演唱會。
+     *   - 其餘角色（含 USER/STAFF 或未知角色）：一律拒絕。
+     * 一律以 404（而非 403）回應，避免洩漏演唱會是否存在。
+     * 授權不變量集中在此處、不再僅依賴 URL matcher。
+     */
     private void checkOwnership(Concert concert, UUID actorId, String actorRole) {
-        if ("ROLE_ORGANIZER".equals(actorRole) && !concert.getOrganizerId().equals(actorId)) {
-            throw new ApiException(ErrorCode.CONCERT_NOT_FOUND);
+        if (Role.ADMIN.matches(actorRole)) {
+            return;
         }
+        if (Role.ORGANIZER.matches(actorRole) && concert.getOrganizerId().equals(actorId)) {
+            return;
+        }
+        throw new ApiException(ErrorCode.CONCERT_NOT_FOUND);
     }
 
     /**
@@ -282,15 +320,20 @@ public class ConcertService {
     }
 
     private ConcertDetailResponse buildDetailResponse(Concert concert) {
-        List<ConcertSessionResponse> sessions = sessionRepository.findByConcertId(concert.getId())
-                .stream()
-                .map(session -> {
-                    List<TicketZoneResponse> zones = zoneRepository.findBySessionId(session.getId())
-                            .stream().map(TicketZoneResponse::from).toList();
-                    return ConcertSessionResponse.from(session, zones);
-                })
+        List<ConcertSession> sessions = sessionRepository.findByConcertId(concert.getId());
+        List<UUID> sessionIds = sessions.stream().map(ConcertSession::getId).toList();
+        // 一次批次載入所有場次的票區，避免逐場次查詢造成 N+1（無場次時不查詢）
+        Map<UUID, List<TicketZoneResponse>> zonesBySession = sessionIds.isEmpty()
+                ? Map.of()
+                : zoneRepository.findBySessionIdIn(sessionIds).stream()
+                        .collect(Collectors.groupingBy(
+                                TicketZone::getSessionId,
+                                Collectors.mapping(TicketZoneResponse::from, Collectors.toList())));
+        List<ConcertSessionResponse> sessionResponses = sessions.stream()
+                .map(session -> ConcertSessionResponse.from(
+                        session, zonesBySession.getOrDefault(session.getId(), List.of())))
                 .toList();
-        return ConcertDetailResponse.from(concert, sessions);
+        return ConcertDetailResponse.from(concert, sessionResponses);
     }
 
     private void validateConcertStatusTransition(ConcertStatus current, ConcertStatus next) {
@@ -323,5 +366,32 @@ public class ConcertService {
 
     private String toKeyword(String q) {
         return (q != null && !q.isBlank()) ? "%" + q.toLowerCase() + "%" : null;
+    }
+
+    /** 封面圖的固定物件 key（無副檔名，靠物件儲存的 Content-Type metadata 提供）。 */
+    private static String coverKey(UUID concertId) {
+        return "concerts/" + concertId + "/cover";
+    }
+
+    /**
+     * 場次時間不變量：saleStartAt &lt; saleEndAt &lt;= eventDate；建立時 eventDate 須在未來。
+     * 銷售時間窗為選填，僅在有設定時檢查對應條件。
+     */
+    private void validateSessionSchedule(Instant saleStartAt, Instant saleEndAt,
+                                         Instant eventDate, boolean requireFutureEvent) {
+        if (eventDate == null
+                || (requireFutureEvent && !eventDate.isAfter(Instant.now()))
+                || (saleStartAt != null && saleEndAt != null && !saleStartAt.isBefore(saleEndAt))
+                || (saleEndAt != null && saleEndAt.isAfter(eventDate))
+                || (saleStartAt != null && saleStartAt.isAfter(eventDate))) {
+            throw new ApiException(ErrorCode.INVALID_SESSION_SCHEDULE);
+        }
+    }
+
+    /** 票區僅能在場次尚未取消／結束時新增或修改（DRAFT 與 ON_SALE 皆可）。 */
+    private void ensureSessionAcceptsZoneChanges(ConcertSession session) {
+        if (session.getStatus() == SessionStatus.CANCELLED || session.getStatus() == SessionStatus.ENDED) {
+            throw new ApiException(ErrorCode.ZONE_MODIFICATION_NOT_ALLOWED);
+        }
     }
 }
